# PAMSI

./: Project_1  README.md
Minimax Algorithm/: README.md
Minimax Algorithm/inc/: Game.h
Minimax Algorithm/src/: Game.cpp
Projekt_1/: .gitignore  CMakeLists.txt  README  README.md  test
Projekt_1/inc/: QueueEmpty.h  RunTimeException.h  SLPQueue.h  SNode.h  Utility.h
Projekt_1/src/: App.cpp  Utility.cpp  main.cpp
Projekt_1/txt/: out.txt
Projekt_2/: .gitignore  CMakeLists.txt  README.md  script.sh  test.csv  test2.csv
Projekt_2/inc/: Game.h  Movie.h  Performance.h  ReadData.h  RenderWindow.h  Sorting.h
Projekt_2/src/: Game.cpp  Graphics.cpp  Performance.cpp  RenderWindow.cpp  Sorting.cpp  TextureManager.cpp  main.cpp
Projekt_3/: .gitignore  CMakeLists.txt  README.md
Projekt_3/inc/: Game.h  TextureManager.h
Projekt_3/src/: Game.cpp  TextureManager.cpp  main.cpp
Sorting Algorithms/: CMakeLists.txt  README.md
Sorting Algorithms/inc/: Graphics.h  Movie.h  TextureManager.h  Visualization.h
Sorting Algorithms/src/: Performance.cpp  ReadData.cpp  Visualization.cpp  main.cpp
