cmake_minimum_required(VERSION 3.26.3)
project(Sorting)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(Sorting inc/RenderWindow.h inc/Sorting.h inc/Movie.h inc/ReadData.h src/Sorting.cpp src/RenderWindow.cpp src/ReadData.cpp src/main.cpp)
target_link_libraries(Sorting ${SDL2_LIBRARIES})